Minor adaptation in mobile version

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="icon" href="calculator.png">
 </head>
 <body class="">
-    <h1>Calculator</h1>
-    <img src="lampOff.png" alt="Lightbulb icon" id="lightbulb">
+    <header>
+        <h1>Calculator</h1>
+        <img src="lampOff.png" alt="Lightbulb icon" id="lightbulb">
+    </header>
     <div id="calculator">
         <section>
             <input type="text" value="" id="calculatorDisplay" readonly/>
