--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
         </section>
         <section id="buttonsContainer">
             <div id="numbers">
-                <div id="9" class="btn">9</div>
-                <div id="8" class="btn">8</div>
-                <div id="7" class="btn">7</div>
-                <div id="6" class="btn">6</div>
-                <div id="5" class="btn">5</div>
-                <div id="4" class="btn">4</div>
-                <div id="3" class="btn">3</div>
-                <div id="2" class="btn">2</div>
-                <div id="1" class="btn">1</div>
-                <div id="0" class="btn">0</div>
-                <div id="." class="btn">.</div>
+                <div id="9" class="btn value-btn">9</div>
+                <div id="8" class="btn value-btn">8</div>
+                <div id="7" class="btn value-btn">7</div>
+                <div id="6" class="btn value-btn">6</div>
+                <div id="5" class="btn value-btn">5</div>
+                <div id="4" class="btn value-btn">4</div>
+                <div id="3" class="btn value-btn">3</div>
+                <div id="2" class="btn value-btn">2</div>
+                <div id="1" class="btn value-btn">1</div>
+                <div id="0" class="btn value-btn">0</div>
+                <div id="." class="btn value-btn">.</div>
             </div>
             <div id="operators">
-                <div class="btn">x</div>
-                <div class="btn">÷</div>
-                <div class="btn">+</div>
-                <div class="btn">-</div>
+                <div class="btn value-btn">x</div>
+                <div class="btn value-btn">÷</div>
+                <div class="btn value-btn">+</div>
+                <div class="btn value-btn">-</div>
                 <div class="btn" id="equal-btn">=</div>
                 <div class="btn" id="clear-btn">C</div>
             </div>
