Linked buttons w/keyboard keys

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                 <div id="2" class="btn value-btn">2</div>
                 <div id="1" class="btn value-btn">1</div>
                 <div id="0" class="btn value-btn">0</div>
-                <div id="." class="btn value-btn">.</div>
+                <div id="decimal" class="btn value-btn">.</div>
             </div>
             <div id="operators">
-                <div class="btn value-btn">x</div>
-                <div class="btn value-btn">÷</div>
-                <div class="btn value-btn">+</div>
-                <div class="btn value-btn">-</div>
-                <div class="btn" id="equal-btn">=</div>
-                <div class="btn" id="clear-btn">C</div>
+                <div id="multiply" class="btn value-btn">x</div>
+                <div id="divide" class="btn value-btn">÷</div>
+                <div id="add" class="btn value-btn">+</div>
+                <div id="substract" class="btn value-btn">-</div>
+                <div id="equal-btn" class="btn">=</div>
+                <div id="clear-btn" class="btn">C</div>
             </div>
         </section>
     </div>
