Added multiply and divide functions

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
         </section>
         <section id="buttonsContainer">
             <div id="numbers">
-                <div id="9" class="btn value-btn">9</div>
-                <div id="8" class="btn value-btn">8</div>
-                <div id="7" class="btn value-btn">7</div>
-                <div id="6" class="btn value-btn">6</div>
-                <div id="5" class="btn value-btn">5</div>
-                <div id="4" class="btn value-btn">4</div>
-                <div id="3" class="btn value-btn">3</div>
-                <div id="2" class="btn value-btn">2</div>
-                <div id="1" class="btn value-btn">1</div>
-                <div id="0" class="btn value-btn">0</div>
-                <div id="decimal" class="btn value-btn">.</div>
+                <div id="9" value="9" class="btn value-btn">9</div>
+                <div id="8" value="8" class="btn value-btn">8</div>
+                <div id="7" value="7" class="btn value-btn">7</div>
+                <div id="6" value="6" class="btn value-btn">6</div>
+                <div id="5" value="5" class="btn value-btn">5</div>
+                <div id="4" value="4" class="btn value-btn">4</div>
+                <div id="3" value="3" class="btn value-btn">3</div>
+                <div id="2" value="2" class="btn value-btn">2</div>
+                <div id="1" value="1" class="btn value-btn">1</div>
+                <div id="0" value="0" class="btn value-btn">0</div>
+                <div id="decimal" value="." class="btn value-btn">.</div>
             </div>
             <div id="operators">
-                <div id="multiply" class="btn value-btn">x</div>
-                <div id="divide" class="btn value-btn">÷</div>
-                <div id="add" class="btn value-btn">+</div>
-                <div id="substract" class="btn value-btn">-</div>
+                <div id="multiply" value="*" class="btn value-btn">x</div>
+                <div id="divide" value="/" class="btn value-btn">÷</div>
+                <div id="add" value="+" class="btn value-btn">+</div>
+                <div id="substract" value="-" class="btn value-btn">-</div>
                 <div id="equal-btn" class="btn">=</div>
                 <div id="clear-btn" class="btn">C</div>
             </div>
