Last try to fix input bug
I keep trying to fix the bug that allows double symbols to be entered.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </header>
     <div id="calculator">
         <section>
-            <input type="text" value="" id="calculatorDisplay" readonly/>
+            <p id="calculatorDisplay"></p>
+            <!-- <input type="text" value="" id="calculatorDisplay"/> -->
         </section>
         <section id="buttonsContainer">
             <div id="numbers">
