Added press effect to buttons

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <div id="1" value="1" class="btn value-btn">1</div>
                 <div id="0" value="0" class="btn value-btn">0</div>
                 <div id="decimal" value="." class="btn value-btn">.</div>
+                <div id="eraseLast-btn" class="btn">C</div>
             </div>
             <div id="operators">
                 <div id="multiply" value="*" class="btn value-btn">x</div>
@@ -38,7 +39,7 @@
                 <div id="add" value="+" class="btn value-btn">+</div>
                 <div id="substract" value="-" class="btn value-btn">-</div>
                 <div id="equal-btn" class="btn">=</div>
-                <div id="clear-btn" class="btn">C</div>
+                <div id="clear-btn" class="btn">AC</div>
             </div>
         </section>
     </div>
